2008-06-23  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* c64/tfe.c: disabled log_message() for tfe_hash_mask[], as it
	accessed memory out of bounds.

2008-06-22  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* arch/amigaos/uiapi.c, arch/os2/ui.c,
	arch/unix/x11/gnome/x11ui.c, arch/unix/x11/xaw/x11ui.c: Added
	the option to choose 'continue' for the CPU JAM dailog.

	* monitor/mon_lex.c, monitor/mon_lex.l: Fixed the undump command
	as provided by M. Kiesel <mayne@users.sourceforge.net>.

	* plus4/plus4mem.c: Fixed the reported plus4 hannes/csory memory
	expansion bug for memory at $ffxx.

	* arch/unix/qnx6/make-bindist.sh,
	arch/unix/sco_sol/make-bindist.sh,
	arch/unix/skyos/make-bindist.sh: Improved some of the
	make-bindist.sh scripts.

2008-06-19  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* vdrive/vdrive-internal.c, vdrive/vdrive-command.c,
	plus4/ted-mem.c, vicii/vicii-mem.c, cbmimage.c, c128/c128mem.c,
	c1541.c, fsdevice/fsdevice-open.c, pet/petmem.c: Changed around
	to get rid of unreachable code.

	* video/video-resources.c, video/video-resources.h,
	video/video-resources-pal.c: Added a check for win32, new
	PAL-mode, PAL emulation on, double size, double scan to give a
	warning about the performance problem of that combination on
	win32.

	* sid/sid-resources.c: Changed the unsigned int to int for some
	variables used in a resource-table.

	* alarm.h, sounddrv/soundwmm.c: Got rid of a comparison of an
	unsigned type with smaller than zero (unsigned int x < 0).

	* main.c, arch/amigaos/mui/mui.c, arch/os2/dialogs/dialogs.rc,
	arch/unix/macosx/Resources/Credits.html,
	arch/unix/x11/xaw/about.c, arch/unix/x11/gnome/about.c,
	arch/msdos/menudefs.c, arch/beos/ui.cc: Added Fabrizio to the
	VICE core members.

	* info.c: Added Fabrizio to the VICE core members, got rid of a
	duplicate Christian Vogelgsang entry and added/updated external
	contributors entries.

	* translate.c: Updated the German and Swedish texts and added a